<resources>
    <string-array name="workspace_tabs">
        <item>Garment</item>
        <item>Lining</item>
        <item>Interfacing</item>
    </string-array>

    <string name="main">Main</string>
    <string name="garments">Garment</string>
    <string name="lining">Lining</string>
    <string name="interfacing">Interfacing</string>
    <string name="other">Other</string>

    <string name="instruction"><u>Instructions</u></string>
    <string name="sewing_instructions">Sewing Instructions</string>
    <string name="tutorial">Tutorial</string>
    <string name="splice">Splice</string>
    <string name="w_Nap">w/NAP</string>
    <string name="_45">45” w/Nap</string>
    <string name="_60">60” w/Nap</string>
    <string name="_20">20”</string>
    <string name="_45text">45”</string>
    <string name="_60text">%1$s” w/Nap</string>
    <string name="move_pieces_to_bin_when_done">Move pieces to bin when done</string>
    <string name="save_and_exit">Save &amp; Exit</string>
    <string name="send_to_projector">Send To Projector</string>
    <string name="select_all">Select All</string>
    <string name="de_select_all">De-\nSelect All</string>
    <string name="mirror_v">Mirror V</string>
    <string name="mirror_h">Mirror H</string>
    <string name="clear">Clear</string>
    <string name="select_layout_info_message">Ditto uses standard 45” with Nap and 60” with Nap fabric widths to optimize the reference layout.  If your pattern uses a different fabric width, please refer to the pattern sewing instructions for more information.</string>
    <string name="spliced_piece">Spliced Pieces</string>
    <string name="spliced_piece_message">Additional pieces cannot be in the workspace at the same time as a spliced piece.</string><!--//multiple warning-->
    <string name="splicing_required">Splicing Required</string>
    <string name="splicing_required_first_message">This is a spliced piece that is too large for the projection area. It will be projected across two or more linked sections.</string><!-- // done splice notification-->
    <string name="splicing_required_message">This is a large piece which required splicing. This piece can\'t be projected at the same time as other pieces.</string> <!--//multiple-->
    <string name="multiple_splicing_required">Multi-Directional Splicing Required</string>
    <string name="splicing_required_multiple_message"><![CDATA[This piece is too large for the projection area and will be projected across 3+ linked sections. <u><b>TRACING</b></u> the entire piece first is recommended before cutting due to the complexity.]]></string> <!--//multiple-->
    <string name="mirror">Mirror</string>
    <string name="api_failed">API Failed</string>
    <string name="mirror_message">Piece will be replaced in workspace with a mirrored version.</string> <!--// mirror reminder done-->
    <string name="api_failed_message">Unable to save to Workspace</string>
    <string name="launch_camera">CONTINUE</string>
    <string name="launch_camera_small_case">Continue</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_smallcase">Cancel</string>
    <string name="empty_string"></string>
    <string name="ok">OK</string>
    <string name="reference_layout">Reference Layout</string>
    <string name="pattern_pieces">Pattern Pieces</string>
    <string name="recalibrate">Calibrate</string>
    <string name="connect">Connect</string>
    <string name="seek_text"><![CDATA["<font color='#AD201A'> %1$d</font>/%2$d"]]></string>
    <string name="splice_text"> Spliced screen %1$d of %2$d</string>
    <string name="tap_to_enlarge">Double Tap to Zoom</string>
    <string name="long_press_to_pattern_piece">LONG PRESS ON PATTERN PIECES TO DRAG INTO WORKSPACE</string>
    <string name="select_a_layout">Select a Layout</string>
    <string name="question_mark">\?</string>
    <string name="reset">Reset</string>
    <string name="size_36_nwith_or_without_nap">Size 36 \nWith or Without Nap</string>
    <string name="switching">Switching</string>
    <string name="switching_message">Current work in workspace will be lost if you switch to different types.</string>

    <string name="complete_cutbin">Complete Bin</string>
    <string name="complete_piece">Did you complete %1$d piece(s)?</string> <!--//cut number reminder done-->
    <string name="click_spliced_second_pieces">First select arrow to view remainder of spliced piece.</string> <!--// splice notification-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_and_exit_dialog_title">Name this project</string>
    <string name="save_and_exit_dialog_message">Type your project name.</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="no_item_in_workspace">No item in Workspace currently</string>
    <string name="overlaping_piece_alert">Please avoid overlapping Pattern Pieces!!</string>
    <string name="outside_workspace_piece_alert">Rotation is not possible as piece is going outside border, either move the piece or use single finger to rotate.</string>
    <string name="camera_alert">Confirm setup and make sure red lighted rectangle is still within the white cutting mat border</string>
    <string name="camera_alert_calibration">Confirm setup and make sure the red lighted rectangle shines <u>ON</u> the white border of the cutting mat (NOT inside or outside)</string>
    <string name="socketfailed">Projector Connection failed. Try again!!</string>
    <string name="renameproject">Rename Project</string>
    <string name="rename">RENAME</string>
    <string name="existing_project">There is an existing project with the same name. Do you want to rename your project or override existing?</string>
    <string name="override">OVERRIDE</string>
    <string name="projection_area_progress">Projection area is in process..Please wait!!</string>
    <string name="projecting_messsage">Projecting Please wait!!</string>
    <string name="projection_progress">Projection area is in process..Please wait!!</string>
    <string name="image_selvage_horizontal">Image Selvage Horizontal</string>
    <string name="str_unable_to_load">Unable to load the file. Please try again!</string>
    <string name="str_retry">RETRY</string>
    <string name="str_cancel">CANCEL</string>
    <string name="alert_no">NO</string>
    <string name="alert_yes">YES</string>
    <string name="str_recalib">Re-Calibrate</string>
    <string name="str_calib">Calibrate</string>
    <string name="str_connect">Connect</string>
    <string name="pattern_instructions">Pattern Instructions</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_failed_message">Downloading pattern pieces is not completed.</string>
    <string name="guest_user_ws_exit_message">Guest User does not have save functionality.</string>
    <string name="guest_user_ws_enter_message">All pattern pieces are not downloaded.</string>
    <string name="tutorial_for_workspace">Tutorial for workspace</string>
    <string name="turn_on_permissions">App will not work properly without this permission. Please turn on the permission from settings</string>
    <string name="provide_location_permission_message">Please provide precise location permission to get bluetooth scan results from settings</string>
    <string name="note_char_limit">%1$s / 500</string>
    <string name="pattern_details">Pattern Details</string>
    <string name="back_navigation">Choose \'Pattern Details\' to modify the pattern size and return to Pattern Details screen.</string>
</resources>
