<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/alert_bg"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/large_padding"
    android:paddingTop="@dimen/medium_padding"
    android:paddingEnd="@dimen/large_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/alertImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="733:242"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginBottom="@dimen/x_large_padding"
        android:contentDescription="@string/camera_alert"
        android:src="@drawable/calibration_image_pop_up"
        app:layout_constraintBottom_toTopOf="@+id/guide_image_view"
        app:layout_constraintEnd_toEndOf="@+id/guide_button"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toTopOf="parent" />
    <!--app:layout_constraintDimensionRatio="195:130"-->

    <TextView
        android:id="@+id/alertText"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_padding"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        android:lineSpacingExtra="@dimen/small_padding"
        android:text="@string/camera_alert_calibration"
        android:textColor="@android:color/black"
        android:textSize="@dimen/camera_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_image_view"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_lt_pro_demi"
        android:padding="@dimen/large_padding"
        android:text="@string/cancel_smallcase"
        android:textColor="@android:color/black"
        android:textSize="@dimen/alert_options_Text"
        app:layout_constraintTop_toBottomOf="@+id/alertText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/textLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x_large_padding"
        android:fontFamily="@font/avenir_next_lt_pro_demi"
        android:padding="@dimen/large_padding"
        android:text="@string/launch_camera_small_case"
        android:textColor="@android:color/black"
        android:textSize="@dimen/alert_options_Text"
        app:layout_constraintTop_toBottomOf="@+id/alertText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>