<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/large_padding"
    android:paddingTop="@dimen/large_padding"
    android:paddingEnd="@dimen/large_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/alertImage"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:contentDescription="@string/camera_alert"
        android:padding="15dp"
        android:src="@drawable/calibration_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="201:136"
        app:layout_constraintEnd_toEndOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alertText"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_padding"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        android:lineSpacingExtra="@dimen/small_padding"
        android:text="@string/camera_alert"
        android:textColor="@android:color/black"
        android:textSize="@dimen/camera_alert"

        app:layout_constraintBottom_toBottomOf="@+id/alertImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_center"
        app:layout_constraintTop_toTopOf="@+id/alertImage"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/avenir_next_lt_pro_demi"
        android:padding="@dimen/large_padding"
        android:text="@string/cancel"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toEndOf="@+id/guideline_center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/alert_options_Text"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/textLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x_large_padding"
        android:fontFamily="@font/avenir_next_lt_pro_demi"
        android:padding="@dimen/large_padding"
        android:text="@string/launch_camera"
        android:textColor="@android:color/black"
        android:textSize="@dimen/alert_options_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>