<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ditto.workspace.ui.WorkspaceViewModel" />

        <variable
            name="utility"
            type="com.ditto.workspace.ui.util.Utility" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workspace_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".96" />

        <TextView
            android:id="@+id/txt_recalibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_recalibrate_icon"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onClickRecalibrate()}"
            android:paddingTop="@dimen/margin_text"
            android:paddingBottom="@dimen/margin_text"
            android:text="@{viewModel.isWorkspaceSocketConnection()? @string/recalibrate : @string/connect}"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_recalibrate"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_pieces"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/recycler_view_pieces" />

        <ImageView
            android:id="@+id/image_scroll_left"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/margin_v_small"
            android:onClick="@{() -> viewModel.clickScrollLeft()}"
            android:paddingStart="@dimen/margin_v_small"
            android:paddingEnd="@dimen/margin_v_small"
            android:src="@{viewModel.isFirstItemVisible ? @drawable/ic_left_scroll_arrow_disable : @drawable/ic_left_scroll_arrow}"
            android:visibility="@{viewModel.isScrollButtonVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_pieces"
            app:layout_constraintEnd_toStartOf="@+id/recycler_view_pieces"
            app:layout_constraintStart_toEndOf="@+id/txt_recalibrate"
            app:layout_constraintTop_toTopOf="@+id/recycler_view_pieces" />

        <ImageView
            android:id="@+id/image_scroll_right"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:onClick="@{() -> viewModel.clickScrollRight()}"
            android:paddingStart="@dimen/margin_v_small"
            android:src="@{viewModel.isLastItemVisible ? @drawable/ic_right_scroll_arrow_disable : @drawable/ic_right_scroll_arrow}"
            android:visibility="@{viewModel.isScrollButtonVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_pieces"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/recycler_view_pieces"
            app:layout_constraintTop_toTopOf="@+id/recycler_view_pieces" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_pieces"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:foregroundGravity="center_vertical"
            app:data="@{viewModel.data.patternPieces}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@+id/image_scroll_right"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".18"
            app:layout_constraintStart_toEndOf="@+id/image_scroll_left"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top"
            tools:listitem="@layout/patterns_pieces_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/tab_divider_color"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_pieces"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/tab_divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recycler_view_pieces" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_workspace_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".58" />

        <RelativeLayout
            android:id="@+id/layout_workspace_outer"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:background="@color/cardColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline_workspace_divider"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_pieces" />

        <include
            android:id="@+id/include_workspacearea"
            layout="@layout/workspace_layout"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            app:layout_constraintBottom_toBottomOf="@+id/layout_workspace_outer"
            app:layout_constraintEnd_toEndOf="@+id/layout_workspace_outer"
            app:layout_constraintStart_toStartOf="@+id/layout_workspace_outer"
            app:layout_constraintTop_toTopOf="@+id/layout_workspace_outer"
            app:viewModel="@{viewModel}" />

        <TextView
            android:id="@+id/txt_reeferance_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference_layout"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_reference_layout"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_pieces" />

        <TextView
            android:id="@+id/txt_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onClickInstructions()}"
            android:text="@string/instruction"
            android:textColor="@color/text_underline"
            android:textSize="@dimen/text_instruction"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_pieces" />

        <TextView
            android:id="@+id/txt_size_45"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_margin="@dimen/margin_text"
            android:background="@{viewModel.clickedSize45?@drawable/rounded_black_bg:@drawable/rounded_light_bg }"
            android:onClick="@{() -> viewModel.clickSize(true)}"
            android:padding="@dimen/margin_v_small"
            android:text="@string/_45"
            android:textColor="@{viewModel.clickedSize45?@android:color/white :@android:color/black}"
            android:textSize="@dimen/text_size_cloth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@+id/guideline_workspace_divider"
            app:layout_constraintTop_toBottomOf="@+id/txt_reeferance_layout" />

        <TextView
            android:id="@+id/txt_size_60"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_margin="@dimen/margin_text"
            android:background="@{viewModel.clickedSize45?@drawable/rounded_light_bg:@drawable/rounded_black_bg}"
            android:onClick="@{() -> viewModel.clickSize(false)}"
            android:padding="@dimen/margin_v_small"
            android:text="@string/_60"
            android:textColor="@{viewModel.clickedSize45?@android:color/black:@android:color/white}"
            android:textSize="@dimen/text_size_cloth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/txt_reeferance_layout" />

        <ImageView
            android:id="@+id/image_selvage_horizontal"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginTop="@dimen/margin_text"
            android:layout_marginEnd="@dimen/margin_text"
            android:layout_marginBottom="@dimen/margin_text"
            app:layout_constraintBottom_toTopOf="@+id/guideline_selvages_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/txt_size_desc"
            app:layout_constraintStart_toStartOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/txt_size_45"
            tools:src="@drawable/demo_fabric" />
        <!--    app:layout_constraintEnd_toStartOf="@+id/image_selvage_vertical"-->

        <!--    <ImageView-->
        <!--        android:id="@+id/image_selvage_vertical"-->
        <!--        android:layout_width="@dimen/dimen_0"-->
        <!--        android:layout_height="@dimen/dimen_0"-->
        <!--        android:layout_marginStart="@dimen/margin_text"-->
        <!--        android:layout_marginTop="@dimen/margin_text"-->
        <!--        android:layout_marginBottom="@dimen/margin_text"-->
        <!--        android:src="@drawable/demo_fabric"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/guideline_selvages_horizontal"-->
        <!--        app:layout_constraintEnd_toStartOf="@+id/txt_size_desc"-->
        <!--        app:layout_constraintHorizontal_bias="1"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/image_selvage_horizontal"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/txt_size_45" />-->


        <TextView
            android:id="@+id/txt_size_desc"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_v_small"
            android:text="@string/size_36_nwith_or_without_nap"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_desc"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/image_selvage_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/image_selvage_horizontal"
            app:layout_constraintTop_toTopOf="@+id/image_selvage_horizontal"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_selvages_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".77" />

        <View
            android:id="@+id/lineview"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/line_size"
            android:background="@color/line_divider_color"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/guideline_selvages_horizontal" />

        <LinearLayout
            android:id="@+id/cutbin_lay"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/save_exit_lay"
            app:layout_constraintStart_toStartOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/lineview">

            <ImageView
                android:id="@+id/image_cut_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cut_bin_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_complete_pieces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="@dimen/seek_height"
                    android:layout_marginEnd="@dimen/margin_workspace"
                    android:text="@{String.format(@string/seek_text,utility.progressCount, viewModel.data.totalPieces)}"
                    android:textColor="@color/text_move"
                    android:textSize="@dimen/text_seek_complete"
                    app:layout_constraintBottom_toTopOf="@+id/cutbin_lay"
                    app:layout_constraintEnd_toEndOf="@+id/cutbin_lay"
                    app:layout_constraintTop_toBottomOf="@+id/lineview" />


                <SeekBar
                    android:id="@+id/seekbar_status"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:max="@{viewModel.data.totalPieces}"
                    android:maxHeight="@dimen/seek_height"
                    android:progressDrawable="@drawable/seek_progress"
                    android:progressTint="@color/progress_green"
                    android:splitTrack="false"
                    android:src="@drawable/ic_cut_bin_icon"
                    android:thumb="@drawable/ic_scissor_thumbnail" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/save_exit_lay"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:gravity="center|end"
            android:paddingStart="@dimen/margin_text"
            app:layout_constraintBottom_toBottomOf="@+id/text_move_pieces"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/lineview">

            <Button
                android:id="@+id/button_send_to_projector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_green_bg"
                android:enabled="true"
                android:minHeight="25dp"
                android:onClick="@{() -> viewModel.projectWorkspace()}"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/send_to_projector"
                android:textColor="@android:color/white"
                android:textSize="@dimen/send_to_projector" />

            <Button
                android:id="@+id/button_save_and_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_send_to_projector"
                android:layout_alignStart="@+id/button_send_to_projector"
                android:layout_alignEnd="@+id/button_send_to_projector"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_black_bg"
                android:enabled="true"
                android:minHeight="25dp"
                android:onClick="@{() -> viewModel.clickSaveAndExit()}"
                android:text="@string/save_and_exit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/send_to_projector" />


        </RelativeLayout>

        <TextView
            android:id="@+id/text_move_pieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_v_small"
            android:text="@string/move_pieces_to_bin_when_done"
            android:textColor="@color/text_move"
            android:textSize="@dimen/text_move_to_drag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_exit_lay"
            app:layout_constraintStart_toStartOf="@+id/txt_size_45"
            app:layout_constraintTop_toBottomOf="@+id/cutbin_lay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>